kubernetes/platform/config/kromgo/external-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kromgo-external
spec:
  parentRefs:
    - name: external
      namespace: istio-gateway
  hostnames:
    - "kromgo.${external_domain}"
  rules:
    - backendRefs:
        - name: kromgo
          port: 8080
