kubernetes/platform/config/kromgo/internal-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kromgo-internal
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Kromgo"
    gethomepage.dev/group: "Platform"
    gethomepage.dev/icon: "json.svg"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=kromgo"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "kromgo.${internal_domain}"
  rules:
    - backendRefs:
        - name: kromgo
          port: 8080
